# event_simulator

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: event_simulator-config.cmake.in  of_dis-config.cmake.in  of_dis_c-config.cmake.in
include/event_simulator/: BasicDifferenceEventSimulator.h  BasicEventSimulator.h  CudaFarnebackFlowCalculator.h  CudaLKOpticalFlowCalculator.h  DISOpticalFlowCalculator.h  DenseInterpolatedEventSimulator.h  DenseOpticalFlowCalculator.h  DifferenceInterpolatedEventSimulator.h  EventSimulator.h  EventSimulators.h  FarnebackFlowCalculator.h  LKOpticalFlowCalculator.h  Loader.h  OpticalFlow.h  Player.h  SparseInterpolatedEventSimulator.h  SparseOpticalFlowCalculator.h
libs/: CMakeLists.txt
src/: BasicDifferenceEventSimulator.cpp  BasicEventSimulator.cpp  CMakeLists.txt  CudaFarnebackFlowCalculator.cpp  CudaLKOpticalFlowCalculator.cpp  DISOpticalFlowCalculator.cpp  DenseInterpolatedEventSimulator.cpp  DenseOpticalFlowCalculator.cpp  DifferenceInterpolatedEventSimulator.cpp  EventSimulator.cpp  EventSimulators.cpp  FarnebackFlowCalculator.cpp  LKOpticalFlowCalculator.cpp  Loader.cpp  OpticalFlow.cpp  Player.cpp  SparseInterpolatedEventSimulator.cpp  SparseOpticalFlowCalculator.cpp  main.cpp
