<?xml version="1.0"?>
<package format="2">
  <name>event_simulator</name>
  <version>0.1.0</version>
  <description>A real-time capable event camera simulator</description>
  <maintainer email="andreas.ziegler@uni-tuebingen.de">Andreas Ziegler</maintainer>
  <author email="andreas.ziegler@uni-tuebingen.de">Andreas Ziegler</author>
  <license>BSD</license>
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
